# YOLOv3-TensorRT-INT8-KCF

./: .gitignore  CMakeLists.txt  README.md  build_engine.cpp  detect.cpp  uart.cpp  uart.h  yololayer.h  yolov3-tiny.cpp
include/: BatchStream.h  EntropyCalibrator.h  car_control.h  uart.h  yololayer.h
src/: car_control.cpp
yolov3/: detect.py  gen_wts.py  models.py  test.py  train.py
yolov3/redball/: kmeans_anchors.py  labels.txt  redball-tiny.cfg  redball.cfg  redball.data  split_dataset.py  test.txt  train.txt
yolov3/weights/: download_yolov3_weights.sh
